--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ a{
     text-decoration: none;
 }
 img{
-    max-width: 100%;
+    width: 100%;
 }
 .contenedor{
     max-width: 120rem;
@@ -101,9 +101,6 @@ h3{
     background-color: var(--primarioOscuro);
     padding: 1rem;
 }
-.producto__imagen{
-    width: 100%;
-}
 .producto__nombre{
     font-size: 4rem;
 }
@@ -152,7 +149,6 @@ h3{
 }
 .nosotros__imagen{
     grid-row: 1 / 2;
-    width: 100%;
 }
 @media (min-width: 768px) {
     .nosotros__imagen{
@@ -176,6 +172,46 @@ h3{
 .bloque__titulo{
     margin: 0;
 }
-.bloque__imagen{
-    width: 100%;
+
+/**! Pagina del producto **/
+
+@media (min-width: 768px) {
+    .camisa{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+    }
+}
+.formulario{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+}
+.formulario__campo{
+    /* border-color: var(--primarioOscuro);
+    border-width: 1rem;
+    border-style: solid; */
+
+    border: 1rem solid var(--primarioOscuro); /**! Es lo mismo que arroba pero mas acotado **/
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+}
+.formulario__submit{
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: backgound-color .3s ease; /**! transition sirve para dar animaciones **/
+    transition: font-size .3s ease;
+    grid-column: 1 / 3;
+}
+.formulario__submit:hover{
+    font-size: 2.4rem;
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
 }
